objects/QuoteLineItem.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Item__c</fullName>
        <formula>&apos;productboard &apos; +  Product2.Name  + &apos; plan&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Breakdown__c</fullName>
        <inlineHelpText>You must add exactly 8 lines.</inlineHelpText>
        <label>Cost Breakdown</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>